examples/test/testpolicy11182.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11182
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key29: value19
      key46: value17
      key38: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value30
          key20: value39
          key23: value18
